move note about localstack snowflake to test system class