@@ -4,6 +4,11 @@ import liquibase.extension.testing.testsystem.DatabaseTestSystem;
 import liquibase.extension.testing.testsystem.wrapper.DatabaseWrapper;
 import liquibase.extension.testing.testsystem.wrapper.JdbcDatabaseWrapper;
 
+/**
+ * Note, to run this in Intellij, you may need to add the following to your run configuration:
+ * <code>--add-opens=java.base/java.nio=ALL-UNNAMED</code>. See more information
+ * <a href="https://arrow.apache.org/docs/java/install.html#java-compatibility">here</a>.
+ */
 public class SnowflakeTestSystem extends DatabaseTestSystem {
     public SnowflakeTestSystem() {
         super("snowflake");
